home-layout with responsive

--- a/index.html
+++ b/index.html
@@ -83,56 +83,40 @@
                     <p>Joyride Coffee Distributors provides premium office coffee delivery and catering to businesses and corporations throughout the New York City metropolitan area.<a href="#">Our story »</a> </p>
             </div><!-- /texbanner-->
 
-            <div class="content">
-                <div class="div1">
-                    <div class="overlay"></div> 
-                    <p class="title1">
-                        <a href="/schedule-a-tasting">SCHEDULE A TASTING</a>
-                    </p>         
-                    <div class="tHover1">
-                        <a href="http://www.joyridecoffeedistributors.com/schedule-a-tasting">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a>
-                    </div>
-                    <div class="bHoverDiv1">Schedule a Tasting</div>
-                    <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
-                </div>
-
-                <div class="div2">
-                    <div class="overlay"></div> 
-                    <p class="title2">
-                        <a href="/coffees">OUR ROASTERS</a>
-                    </p>
-                    <img src="img/Joyride-Coffee_Roasters.jpg" alt="Schedule a Tasting" />  
-                    <div class="tHoverDiv2">All of our beans are roasted to order, locally. Our roasters are cherry picked from among the best of New York.
-                    </div>
-                    <div class="bHoverDiv2">Learn More</div>
-                </div>
-
-                <div class="div3">
-                    <div class="titleDiv3">From Our Blog</div>
-                    <div class="row">
-                        <div class="img"></div>
-                        <div class="date">October 7, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="http://www.joyridecoffeedistributors.com/blog/joyride-services-products/coffee-tasting-at-tobys-estate-williamsburg-bk">Coffee Tasting at Toby’s Estate, (Williamsburg, BK)</a>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="img"></div>
-                    <div class="date">October 1, 2013</div>
-                    <div class="address">
-                        <a target="_blank" href="http://www.joyridecoffeedistributors.com/blog/coffee-news/cafe-review-the-bean">Café Review – The Bean</a>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="img"></div>
-                    <div class="date">September 29, 2013</div>
-                    <div class="address">
-                        <a target="_blank" href="http://www.joyridecoffeedistributors.com/blog/uncategorized/happy-national-coffee-day">Happy National Coffee Day!</a>
-                    </div>
-                </div>
-            </div>
+            <section id="content">
+	<div id="div" class="div1">
+    	<div class="overlay"></div>
+        <p id="title" class="title1"><a href="#">SCHEDULE A TASTING</a></p>
+        <div id="tHover" class="tHover1"><a href="#">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a></div>
+        <div id="bHover" class="bHover1"><a>Schedule a Tasting</a></div>      
+        <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
+    </div>
+    <div id="div" class="div2">
+    	<div class="overlay"></div>
+        <p id="title" class="title2"><a href="#">OUR ROASTERS</a></p>
+        <div id="tHover" class="tHover2"><a>All of our beans are roasted to order, locally. Our roasters are cherry picked from among the best of New York.</a></div>
+        <div id="bHover" class="bHover2"><a>Learn More</a></div>
+    	<img src="img/Joyride-Coffee_Roasters.jpg" alt="Schedule a Tasting" />    	
+    </div>
+     <div id="div" class="div3">
+    	<div id="title" class="title3"><a>From Our Blog</a></div>
+        <div id="row" class="row1">
+        	<div class="img"></div>
+            <div class="date">October 7, 2013</div>
+            <div class="address"><a target="_blank" href="#">Coffee Tasting at Toby’s Estate, (Williamsburg, BK)</a></div>
+        </div>
+        <div id="row" class="row2">
+            <div class="img"></div>
+            <div class="date">October 1, 2013</div>
+            <div class="address"><a target="_blank" href="#">Café Review – The Bean</a></div>
+        </div>
+        <div id="row" class="row3">
+        	<div class="img"></div>
+            <div class="date">September 29, 2013</div>
+            <div class="address"><a target="_blank" href="#">Happy National Coffee Day!</a></div>
+        </div>
+    </div>
+</div>
 
             
             <footer id="footer">
