--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header id="header">
                 <div class="wrapper">
                     <h1 id="logo">
-                        <a href="#">
+                        <a href="index.html">
                             <img src="img/logo_joyride-coffee.gif" alt="Joyride Coffee"></img>
                         </a>
                     </h1>
@@ -26,7 +26,7 @@
                     <nav class="navigation hide">
                         <ul>
                             <li class="top-menu parent-menu parent">
-                                <a href="#">About</a>
+                                <a href="">About</a>
                                 <div class="icon-menu"></div>
                                 <ul class="about">
                                     <li ><a href="#">Our Story</a></li>
@@ -48,10 +48,10 @@
                                     <li><a href="#">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
-                            <li class="top-menu"><a href="#">Coffee</a></li>
-                            <li class="top-menu"><a href="#">Contact</a></li>
-                            <li class="top-menu"><a href="#">Blog</a></li>
-                            <li class="top-menu"><a href="#">Order Coffee</a></li>
+                            <li class="top-menu clickable"><a href="#">Coffee</a></li>
+                            <li class="top-menu clickable"><a href="contact.html">Contact</a></li>
+                            <li class="top-menu clickable"><a href="#">Blog</a></li>
+                            <li class="top-menu clickable"><a href="#">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     
                         <!--<a href="#" id="pull">Menu</a>-->
@@ -91,7 +91,9 @@
                         <a href="#">SCHEDULE A TASTING</a>
                     </p>
                     <div class="details hide">
-                        <a href="#">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a>
+                        <a href="#">
+                            Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
+                        </a>
                     </div>
                     <div class="action hide">
                         <a>Schedule a Tasting</a>
