done responsive home and contact pages

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </p>
             </div><!-- /texbanner-->
 
-            <section class="content-container">
+            <section class="content-container wrapper">
             	<div class="content-item">
                 	<div class="overlay"></div>
                     <p class="title">
