fix jquery for navigation

--- a/about-ourteam.html
+++ b/about-ourteam.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/home.css">
-        <script type="text/javascript" src="js/JQuery.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/about-ourteam.css">
+        <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 
 </head>
     </head>
@@ -58,87 +58,40 @@
                 <div class="sub-background"></div>  
             </header><!-- /header-->
 
-            <div class="slides-overlay"></div> 
-            <div id="slideshow">
-                <img src="img/slide1.jpg" alt="Slideshow Image 1" class="active"/>
-                <img src="img/slide2.jpg" alt="Slideshow Image 2"/>
-                <img src="img/slide3.jpg" alt="Slideshow Image 3"/>
-                <img src="img/slide4.jpg" alt="Slideshow Image 4"/>
-                <img src="img/slide5.jpg" alt="Slideshow Image 5"/>             
-            </div><!-- /slideshow-->
-            <div class="slidedescription">
-                <h2>
-                    <span class="top">Now Introducing Counter Culture's</span>
+            <div class="slides-overlay"></div>
+            <div id="banner">
+
+                <img src="img/Joyride_Coffee_Our_Teamv4.jpg"/>
+                <div class="wrapper textbanner">
+                    <h2> Our Team </h2>
+                </div>
+            </div> 
+            <div id="content" class="wrapper">
+                <div class="content-left">
+                    <p class="p1">We Love Coffee</p>
                     <br/>
-                    <span class="bottom">Guatemala Finca Nueva Armenia</span>
-                </h2>
-                    
-                <div class="learnmorebutton">
-                    <a href="#">Learn More</a>
+                    <p class="p2">Joyride is owned and operated by three brothers who drink far too much coffee.  Originally, they ran a mobile café dishing Stumptown coffee on the streets of Manhattan.  Customers often lamented the quality of their own office coffee, and an idea was born: providing amazing office coffee with café-quality equipment and active, engaged service.  Now, Joyride delivers freshly roasted coffee from amazing roasters to offices across the tri-state region. </p>
+					</br>
+					<p class="p2">Since the days of the truck, Joyride has grown to include a great group of people.</p>
+					</br></br></br>
+					<p class="p2"><strong>Founders:</strong></p>
+					<p class="p2">▸ <a href="">David Belanich</a></br>▸ <a href="">Adam Belanich</a></br>▸ <a href="">Noah Belanich</a></p>
+					<p class="p2"><strong>Team:</strong></p>
+					<p class="p2">▸ <a href="">Gracie Bialecki</a> - Account Manager, Sales</br>▸ <a href="">Meghan Fredrich</a> - Sales</br>▸ <a href="">Anders Crabo</a> - Equipment Tech & Sales</br>▸ Peter Martin - Operations</br>▸ Paul Cadena - Operations</br>▸ Jeremiah Brandenburg - Operations</p>
+					<p class="p2"><strong>Dogs:</strong></p>
+					<p class="p2">▸ Otto - Head of sleeping and licking faces</br>▸ Lola - Grand Queen of the Universe</br>▸ Ike - The Wild Card</p>
                 </div>
-            </div><!-- /slidedescription-->
-
-            <div class="textbanner wrapper">
-                <p>Joyride Coffee Distributors provides premium office coffee delivery and catering to businesses and corporations throughout the New York City metropolitan area.<a href="#">Our story »</a>
-                </p>
-            </div><!-- /texbanner-->
-
-            <section class="content-container wrapper">
-            	<div class="content-item">
-                	<div class="overlay"></div>
-                    <p class="title">
-                        <a href="#">SCHEDULE A TASTING</a>
-                    </p>
-                    <div class="details hide">
-                        <a href="#">
-                            Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!
-                        </a>
-                    </div>
-                    <div class="action hide">
-                        <a>Schedule a Tasting</a>
-                    </div>      
-                    <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
-                </div>
-                <div class="content-item">
-                	<div class="overlay"></div>
-                    <p class="title">
-                        <a href="#">OUR ROASTERS</a>
-                    </p>
-                    <div class="details hide">
-                        <a>All of our beans are roasted to order, locally. Our roasters are cherry picked from among the best of New York.</a>
-                    </div>
-                    <div class="action hide" id="action-learnmore">
-                        <a>Learn More</a>
-                    </div>
-                	<img src="img/Joyride-Coffee_Roasters.jpg" alt="Schedule a Tasting" />    	
-                </div>
-                 <div class="content-item">
-                	<div class="title-blog"><a>From Our Blog</a>
-                    </div>
-                    <div id="row" class="row1">
-                    	<div class="img"></div>
-                        <div class="date">October 7, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Coffee Tasting at Toby’s Estate, (Williamsburg, BK)</a>
+                <div class="content-right">
+                    <div id="div" class="div1">
+                	   <div class="overlay"></div>
+                        <p id="title" class="title1"><a href="#">SCHEDULE A TASTING</a></p>
+                        <div id="tHover" class="tHover1"><a href="#">Learn about Joyride's office coffee services – it’s delicious, fun, informative, and free!</a>
                         </div>
-                    </div>
-                    <div id="row" class="row2">
-                        <div class="img"></div>
-                        <div class="date">October 1, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Café Review – The Bean</a>
-                        </div>
-                    </div>
-                    <div id="row" class="row3">
-                    	<div class="img"></div>
-                        <div class="date">September 29, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Happy National Coffee Day!</a>
-                        </div>
+                        <div id="bHover" class="bHover1"><a>Schedule a Tasting</a></div>      
+                        <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                     </div>
                 </div>
-            </section>
-
+            </div>
             
             <footer id="footer">
                 <div class=" content-footer wrapper">
