--- a/order.html
+++ b/order.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/home.css">
-        <script type="text/javascript" src="js/JQuery.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/order.css">
+        <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 
 </head>
     </head>
@@ -29,8 +29,8 @@
                                 <a href="">About</a>
                                 <div class="icon-menu"></div>
                                 <ul class="about">
-                                    <li><a href="about-ourstory.html">Our Story</a></li>
-                                    <li ><a href="about-ourteam.html">Our Team</a></li>
+                                    <li ><a href="#">Our Story</a></li>
+                                    <li ><a href="#">Our Team</a></li>
                                     <li ><a href="#">Our Customers</a></li>
                                     <li ><a href="#">Our Partners</a></li>
                                     <li ><a href="#">Why Joyride Coffee</a></li>
@@ -48,44 +48,33 @@
                                     <li><a href="#">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
-                            <li class="top-menu"><a href="#">Coffee</a></li>
-                            <li class="top-menu"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu"><a href="#">Blog</a></li>
-                            <li class="top-menu"><a href="order.html">Order Coffee</a></li>
+                            <li class="top-menu clickable"><a href="#">Coffee</a></li>
+                            <li class="top-menu clickable"><a href="contact.html">Contact</a></li>
+                            <li class="top-menu clickable"><a href="#">Blog</a></li>
+                            <li class="top-menu clickable"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
                 </div><!-- /Wrapper--> 
                 <div class="sub-background"></div>  
             </header><!-- /header-->
 
-            <div class="slides-overlay"></div> 
-            <div id="slideshow">
-                <img src="img/slide1.jpg" alt="Slideshow Image 1" class="active"/>
-                <img src="img/slide2.jpg" alt="Slideshow Image 2"/>
-                <img src="img/slide3.jpg" alt="Slideshow Image 3"/>
-                <img src="img/slide4.jpg" alt="Slideshow Image 4"/>
-                <img src="img/slide5.jpg" alt="Slideshow Image 5"/>             
-            </div><!-- /slideshow-->
-            <div class="slidedescription">
-                <h2>
-                    <span class="top">Now Introducing Counter Culture's</span>
-                    <br/>
-                    <span class="bottom">Guatemala Finca Nueva Armenia</span>
-                </h2>
-                    
-                <div class="learnmorebutton">
-                    <a href="#">Learn More</a>
+            <div class="slides-overlay"></div>
+            <div class="banner">
+                <img src="img/slide3.jpg"/>
+                <div class="wrapper text-banner">
+                    <h2> Order Form </h2>
                 </div>
-            </div><!-- /slidedescription-->
+            </div> 
 
-            <div class="textbanner wrapper">
-                <p>Joyride Coffee Distributors provides premium office coffee delivery and catering to businesses and corporations throughout the New York City metropolitan area.<a href="#">Our story »</a>
-                </p>
-            </div><!-- /texbanner-->
-
-            <section class="content-container wrapper">
-            	<div class="content-item">
-                	<div class="overlay"></div>
+            <div id="content" class="wrapper">
+                <div class="content-left">
+                    <p>Joyride’s online store is under construction. For now, please call us with your orders at 917.670.3314 or send your order via email to orders@joyridecoffee.com</p>
+                    <br/>
+                    <p>Thank you for your patience!</p>
+                </div>
+                <div class="content-right">
+                    <div class="content-item">
+                    <div class="overlay"></div>
                     <p class="title">
                         <a href="#">SCHEDULE A TASTING</a>
                     </p>
@@ -99,46 +88,8 @@
                     </div>      
                     <img src="img/Joyride-Coffee_Schedule-A-Tasting.jpg" alt="Schedule a Tasting" />
                 </div>
-                <div class="content-item">
-                	<div class="overlay"></div>
-                    <p class="title">
-                        <a href="#">OUR ROASTERS</a>
-                    </p>
-                    <div class="details hide">
-                        <a>All of our beans are roasted to order, locally. Our roasters are cherry picked from among the best of New York.</a>
-                    </div>
-                    <div class="action hide" id="action-learnmore">
-                        <a>Learn More</a>
-                    </div>
-                	<img src="img/Joyride-Coffee_Roasters.jpg" alt="Schedule a Tasting" />    	
                 </div>
-                 <div class="content-item">
-                	<div class="title-blog"><a>From Our Blog</a>
-                    </div>
-                    <div id="row" class="row1">
-                    	<div class="img"></div>
-                        <div class="date">October 7, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Coffee Tasting at Toby’s Estate, (Williamsburg, BK)</a>
-                        </div>
-                    </div>
-                    <div id="row" class="row2">
-                        <div class="img"></div>
-                        <div class="date">October 1, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Café Review – The Bean</a>
-                        </div>
-                    </div>
-                    <div id="row" class="row3">
-                    	<div class="img"></div>
-                        <div class="date">September 29, 2013</div>
-                        <div class="address">
-                            <a target="_blank" href="#">Happy National Coffee Day!</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
+            </div>
             
             <footer id="footer">
                 <div class=" content-footer wrapper">
