--- a/contact.html
+++ b/contact.html
@@ -23,22 +23,21 @@
                         </a>
                     </h1>
                     <a href="#" class="menu-toggle" id="icon-menu">menu</a>
-                    
                     <nav class="navigation hide">
                         <ul>
-                            <li class="top-menu parent-menu " id="parent1-click">
-                                <a href="#">About</a>
+                            <li class="top-menu parent-menu parent">
+                                <a href="">About</a>
                                 <div class="icon-menu"></div>
                                 <ul class="about">
-                                    <li ><a href="#">Our Story</a></li>
-                                    <li ><a href="#">Our Team</a></li>
+                                    <li ><a href="about-ourstory">Our Story</a></li>
+                                    <li ><a href="about-ourteam.html">Our Team</a></li>
                                     <li ><a href="#">Our Customers</a></li>
                                     <li ><a href="#">Our Partners</a></li>
                                     <li ><a href="#">Why Joyride Coffee</a></li>
                                 </ul><!--menu cap 2-->
 
                             </li>
-                            <li class="top-menu parent-menu " id="parent2-click">
+                            <li class="top-menu parent-menu parent">
                                 <a href="#">Service</a>
                                 <div class="icon-menu"></div>
                                 <ul  class="service">
@@ -49,10 +48,10 @@
                                     <li><a href="#">FAQ</a></li>
                                 </ul><!--menu cap 2-->
                             </li>
-                            <li class="top-menu"><a href="#">Coffee</a></li>
-                            <li class="top-menu"><a href="contact.html">Contact</a></li>
-                            <li class="top-menu"><a href="#">Blog</a></li>
-                            <li class="top-menu"><a href="#">Order Coffee</a></li>
+                            <li class="top-menu clickable"><a href="#">Coffee</a></li>
+                            <li class="top-menu clickable"><a href="contact.html">Contact</a></li>
+                            <li class="top-menu clickable"><a href="#">Blog</a></li>
+                            <li class="top-menu clickable"><a href="order.html">Order Coffee</a></li>
                         </ul><!--menu cap 1-->
                     </nav>
                 </div><!-- /Wrapper--> 
